# src/common/pagination/dtos/page-info.dto.ts
@@ -1,14 +1,17 @@
 import { ApiProperty } from '@nestjs/swagger';
+import { Expose } from 'class-transformer';
 import { PageInfo } from '../types/page.type';
 
 export class PageInfoDto {
   @ApiProperty()
   page: number;
 
-  @ApiProperty()
+  @ApiProperty({ name: 'page_size' })
+  @Expose({ name: 'page_size' })
   pageSize: number;
 
-  @ApiProperty()
+  @ApiProperty({ name: 'has_next_page' })
+  @Expose({ name: 'has_next_page' })
   hasNextPage: boolean;
 
   constructor(pageInfo: PageInfo) {
