# src/modules/users/types/confirmation-result.type.ts
@@ -1,0 +1,4 @@
+export type ConfirmationResult = {
+  isCorrect: boolean;
+  discordId: string | null;
+};
