# src/modules/users/types/user-credentials.type.ts
@@ -1,0 +1,4 @@
+export type UserCredentials = {
+  discordId: string;
+  password: string | null;
+};
